--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 Optimized the sphere intersections
 Handle if rays are inside a box
+Add a Interceptable for bounding boxes
 Fix the shader double pointer
