Added fully working sorting for the BVH

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ Optimized the sphere intersections
 Add a Interceptable for bounding boxes
 Fix the shader double pointer
 Change invRecLevel to be a recLevel
+Pick the pivot more wisely
